fix: Overflow transition from hidden

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 .skip-link:focus {
   transform: translateY(0%);
   visibility: visible;
-  z-index: 1;
+  z-index: 3;
 }
 
 .fade-enter {
